# pyarrow-bigquery

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: action-tests.yml  python-publish.yml  tests.yml
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  proto.rs  reader.rs
src/pyarrow/bigquery/: __init__.py  read.py  some_itertools.py
src/pyarrow/bigquery/exchange/: __init__.py  arrow_ipc.py  base.py  feather.py  memory.py  shared_dict.py  shared_memory.py
src/pyarrow/bigquery/write/: __init__.py  pa_to_bq.py  pa_to_pb.py  type_mapping.py  upload.py
tests/integration/: test_upload.py
tests/unit/: test_arrow_ipc_exchange.py  test_feather_exchange.py  test_ipc_defaults.py  test_read_empty.py  test_read_resources.py  test_read_workers.py  test_shared_memory_exchange.py  test_write_workers.py
tests/unit/write/pa_to_bq/: test_emit.py
tests/unit/write/pa_to_pb/: test_amend_schema.py  test_ammend_schema.py  test_generate.py  test_serialize.py
