[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarrow-bigquery"
version = "0.5.7"
description = "An extension library to write to and read from BigQuery tables as PyArrow tables."
authors = [{ name = "Sebastian Pawluś" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["pyarrow", "bigquery"]
requires-python = ">=3.10,<3.14"

dependencies = [
    "google-cloud-bigquery>=3,<5",
    "google-cloud-bigquery-storage>=2,<3",
    "pyarrow>=16,<20",
    "tenacity"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ipdb"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyarrow.bigquery*"]  # Important for namespace package
namespaces = true                # Enable PEP 420 namespace package discovery

[tool.ruff]
exclude = [".git"]
line-length = 100
indent-width = 4
