[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyarrow-bigquery"
version = "0.7.0"
description = "An extension library to write to and read from BigQuery tables as PyArrow tables."
authors = [{ name = "Sebastian Pawluś" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["pyarrow", "bigquery"]
requires-python = ">=3.10"

dependencies = [
    "google-cloud-bigquery>=3.10.0,<5",
    "google-cloud-bigquery-storage>=2.18.0,<3",
    "pyarrow",
    "tenacity"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pdbpp",
    "maturin>=1.7,<2.0",
]

[tool.maturin]
# Mixed Python + Rust project. Python sources live under src/ as a PEP 420
# namespace package (pyarrow.bigquery); the compiled extension is published
# as pyarrow.bigquery._rust.
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "pyarrow.bigquery._rust"
features = ["pyo3/extension-module"]
include = [{ path = "rust/**/*", format = "sdist" }]

[tool.ruff]
exclude = [".git"]
line-length = 100
indent-width = 4
