[package]
name = "pyarrow_bigquery_rs"
version = "0.6.7"
edition = "2021"
license = "MIT"
description = "Rust acceleration for pyarrow-bigquery."
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310"] }

[profile.release]
lto = "thin"
codegen-units = 1
